--- a/ClinicAppointmentGroupProject/Views/Home/Index.cshtml
+++ b/ClinicAppointmentGroupProject/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="container mt-5 text-center home-container">
     <h1 class="display-4 fw-bold mb-3 home-title">🏥 Welcome to Serenity Clinic</h1>
     <p class="lead home-subtitle">
-        Your haven of compassionate and personalized healthcare. <br></br> We provide a calm, welcoming environment where your well-being is our top priority. 
+        Your haven of compassionate and personalized healthcare. We provide a calm,<br> welcoming environment where your well-being is our top priority.
     </p>
 
     <hr class="my-4 home-divider" />
